# AED-project

./: .gitignore  CMakeLists.txt  README.md  main.cpp  myconfig
dataset/: changes.csv  classes.csv  students_classes.csv
html/: Application_8h_source.html  Class_8h_source.html  File__Reader_8h_source.html  Interface_8h_source.html  Lecture_8h_source.html  Schedule_8h_source.html  Student_8h_source.html  UC_8h_source.html  annotated.html  classApplication-members.html  classApplication.html  classClass-members.html  classClass.html  classFile__Reader-members.html  classFile__Reader.html  classInterface-members.html  classInterface.html  classLecture-members.html  classLecture.html  classSchedule-members.html  classSchedule.html  classStudent-members.html  classStudent.html  classUC-members.html  classUC.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  globals_8h_source.html  graph_legend.html  index.html  menudata.js
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  (+16 more)
latex/: annotated.tex  classApplication.tex  classClass.tex  classFile__Reader.tex  classInterface.tex  classLecture.tex  classSchedule.tex  classStudent.tex  classUC.tex  refman.tex
src/: Application.cpp  Application.h  Class.cpp  Class.h  File_Reader.cpp  File_Reader.h  Interface.cpp  Interface.h  Lecture.cpp  Lecture.h  Schedule.cpp  Schedule.h  Student.cpp  Student.h  UC.cpp  UC.h  a.cpp  globals.h  main.cpp
